Validate XML element names with QXml

Newer versions of libxml2 are more lenient with valid xml names than
QXmlStreamReader allows, such as with multi-byte emoji. Use both
methods to check.

Use correct approach to strip control codes with multi-byte input.

BUG: 521148
FIXED-IN: 4.2.1
CCBUG: 418067