src/translators/tellico_xml.h
@@ -50,7 +50,6 @@ namespace Tellico {
     bool validXMLElementName(const QString& name);
     QString elementName(const QString& name);
     QByteArray recoverFromBadXMLName(const QByteArray& data);
-    QByteArray removeInvalidXml(const QByteArray& data);
   }
 }
 
